Mobile navbar z-index fix

--- a/assets/styles/components/_navbar.scss
+++ b/assets/styles/components/_navbar.scss
@@ -44,6 +44,7 @@
   height: calc(100% - #{$mob-nav-height});
   width: 60%;
   padding: 0px;
+  z-index: 999;
   transform: translateX(-100%);
 
   transition: transform 250ms ease-in-out;
